<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_to_phonebill"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainReadMeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayREADME"
        android:text="@string/help"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        android:textColor="@color/design_default_color_secondary"
        style="?android:attr/buttonBarButtonStyle" />

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="366dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/mainAddToPhoneBillButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:onClick="AddToPhoneBill"
            android:text="@string/add_call_to_phone_bill" />

        <Button
            android:id="@+id/mainPrettyPrintButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="45dp"
            android:onClick="prettyPrintAPhoneBill"
            android:text="@string/pretty_print_phone_bill" />

        <Button
            android:id="@+id/mainSearchAPhoneBillButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:onClick="searchPhoneBill"
            android:text="@string/search_a_phone_bill" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>