<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCallToBill">

    <TextView
        android:id="@+id/addPhoneBillTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_a_new_phone_call_to_a_phone_bill"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="384dp"
        android:layout_height="546dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhoneBillTitle"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addPhoneBillCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:hint="@string/customer_name"
                android:inputType="text"
                android:labelFor="@id/addPhoneBillCustomer" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPhoneBillCaller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:hint="@string/caller_number_nnn_nnn_nnnn"
                    android:inputType="phone"
                    android:labelFor="@id/addPhoneBillCaller" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addPhoneBillCallee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:hint="@string/callee_number_nnn_nnn_nnnn"
                        android:inputType="phone"
                        android:labelFor="@id/addPhoneBillCallee" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addPhoneBillBeginDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/begin_date_dd_dd_dddd_dd_dd"
                            android:inputType="datetime"
                            android:labelFor="@id/addPhoneBillBeginDate" />

                        <RadioGroup
                            android:id="@+id/addPhoneBillBeginAmPm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_marginBottom="25dp">

                            <RadioButton
                                android:id="@+id/addPhoneBillBeginAm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/am" />

                            <RadioButton
                                android:id="@+id/addPhoneBillBeginPm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/pm" />
                        </RadioGroup>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/addPhoneBillEndDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/end_date_dd_dd_dddd_dd_dd"
                                android:inputType="datetime"
                                android:labelFor="@id/addPhoneBillEndDate" />

                            <RadioGroup
                                android:id="@+id/addPhoneBillEndAmPm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:layout_marginBottom="25dp">

                                <RadioButton
                                    android:id="@+id/addPhoneBillEndAm"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/am" />

                                <RadioButton
                                    android:id="@+id/addPhoneBillEndPm"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/pm" />
                            </RadioGroup>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <Button
                                    android:id="@+id/addPhoneBillSubmitButton"
                                    android:onClick="submitInputs"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/submit"
                                    style="?android:attr/buttonBarButtonStyle" />
                                <Button
                                    android:id="@+id/addPhoneBillResetButton"
                                    android:onClick="clearInputs"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/design_default_color_secondary"
                                    android:text="@string/reset"
                                    style="?android:attr/buttonBarButtonStyle" />
                            </LinearLayout>
                        </com.google.android.material.textfield.TextInputLayout>
                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>